5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4271/executions/1838_1273.log
== TEST (2019-06-19 15:15:17) 
-- CODE:
from numpy import *
from numpy.linalg import * 
coeficientes = array ([[1, -1, 0, 0], [0, 1, -1, 0], [0, 0, 1, 0], [1, 0, 0, 1]])
valores = ([550, -120, 350, 870])
valores = valores.T
solucao = solve(coeficiente, valores)
print(solucao)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-19 15:15:21) 
-- CODE:
from numpy import *
from numpy.linalg import * 
coeficientes = array ([[1, -1, 0, 0], [0, 1, -1, 0], [0, 0, 1, 0], [1, 0, 0, 1]])
valores = ([550, -120, 350, 870])
valores = valores.T
solucao = solve(coeficiente, valores)
print(solucao)
	
-- EXECUTION TIME:
1.03797
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1838/1273/main.py", line 5, in <module>
    valores = valores.T
AttributeError: 'list' object has no attribute 'T'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-19 15:15:33) 
-- CODE:
from numpy import *
from numpy.linalg import * 
coeficientes = array ([[1, -1, 0, 0], [0, 1, -1, 0], [0, 0, 1, 0], [1, 0, 0, 1]])
valores = ([50, -120, 350, 870])
valores = valores.T
solucao = solve(coeficiente, valores)
print(solucao)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-19 15:15:52) 
-- CODE:
from numpy import *
from numpy.linalg import * 
coeficientes = array ([[1, -1, 0, 0], [0, 1, -1, 0], [0, 0, 1, 0], [1, 0, 0, 1]])
valores = ([50, -120, 350, 870])
valores = valores.T
solucao = solve(coeficiente, valores)
print(solucao)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-19 15:19:43) 
-- CODE:
from numpy import *
from numpy.linalg import * 
coeficientes = array ([[1, -1, 0, 0], [0, 1, -1, 0], [0, 0, 1, 0], [1, 0, 0, 1]])
valores = ([50, -120, 350, 870])
valores = valores.T
solucao = solve(coeficiente, valores)
print(solucao)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-19 15:20:00) 
-- CODE:
from numpy import *
from numpy.linalg import * 
coeficientes = array ([[1, -1, 0, 0], [0, 1, -1, 0], [0, 0, 1, 0], [1, 0, 0, 1]])
valores = ([50, -120, 350, 870])
valores = v
solucao = solve(coeficiente, valores)
print(solucao)
-- EXECUTION TIME:
1.03334
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1838/1273/main.py", line 5, in <module>
    valores = v
NameError: name 'v' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-19 15:20:19) 
-- CODE:
from numpy import *
from numpy.linalg import * 
coeficientes = array ([[1, -1, 0, 0], [0, 1, -1, 0], [0, 0, 1, 0], [1, 0, 0, 1]])
valores = ([50, -120, 350, 870])
valores = valores. T
solucao = solve(coeficiente, valores)
print(solucao)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-19 15:20:38) 
-- CODE:
from numpy import *
from numpy.linalg import * 
coeficientes = array ([[1, -1, 0, 0], [0, 1, -1, 0], [0, 0, 1, 0], [1, 0, 0, 1]])
valores = ([50, -120, 350, 870])
valores = valores.T
solucao = solve(coeficiente, valores)
print(solucao)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-19 15:21:13) 
-- CODE:
from numpy import *
from numpy.linalg import * 
coeficientes = array ([[1, -1, 0, 0], [0, 1, -1, 0], [0, 0, 1, 0], [1, 0, 0, 1]])
valores = ([50, -120, 350, 870])
valores = valores.T
solucao = solve(coeficiente, valores)
print(solucao)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-19 15:22:07) 
-- CODE:
from numpy import *
from numpy.linalg import * 
coeficientes = array ([[1, -1, 0, 0], [0, 1, -1, 0], [0, 0, 1, 0], [1, 0, 0, 1]])
valores = ([50, -120, 350, 870])
valores = valores.T
solucao = solve(coeficiente, valores)
print(solucao)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-19 15:22:11) 
-- CODE:
from numpy import *
from numpy.linalg import * 
coeficientes = array ([[1, -1, 0, 0], [0, 1, -1, 0], [0, 0, 1, 0], [1, 0, 0, 1]])
valores = ([50, -120, 350, 870])
valores = valores.T
solucao = solve(coeficiente, valores)
print(solucao)
-- EXECUTION TIME:
0.82556
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1838/1273/main.py", line 5, in <module>
    valores = valores.T
AttributeError: 'list' object has no attribute 'T'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-19 15:34:23) 
-- CODE:
from numpy import *
from numpy.linalg import * 
coeficientes = array ([[1, -1, 0, 0], [0, 1, -1, 0], [0, 0, 1, 0], [1, 0, 0, 1]])
valores = ([50, -120, 350, 870])
valores = valores.T
solucao = solve(coeficientes, valores)
print(solucao)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-19 15:34:43) 
-- CODE:
from numpy import *
from numpy.linalg import * 
coeficientes = array ([[1, -1, 0, 0], [0, 1, -1, 0], [0, 0, 1, 0], [1, 0, 0, 1]])
valores = ([50, -120, 350, 870])
valores = valores.T
solucao = solve(coeficientes, valores)
print(solucao)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-19 15:35:39) 
-- CODE:
from numpy import *
from numpy.linalg import * 
coeficientes = array ([[1, -1, 0, 0], [0, 1, -1, 0], [0, 0, 1, 0], [1, 0, 0, 1]])
valores = ([50, -120, 350, 870])
valores = valores.T
solucao = solve(coeficientes, valores)
print(solucao)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-19 15:36:07) 
-- CODE:
from numpy import *
from numpy.linalg import * 
coeficientes = array ([[1, -1, 0, 0], [0, 1, -1, 0], [0, 0, 1, 0], [1, 0, 0, 1]])
valores = ([50, -120, 350, 870])
valores = valor
solucao = solve(coeficientes, valores)
print(solucao)
-- EXECUTION TIME:
1.21095
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1838/1273/main.py", line 5, in <module>
    valores = valor
NameError: name 'valor' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-19 15:37:39) 
-- CODE:
from numpy import *
from numpy.linalg import * 
coeficientes = array ([[1, -1, 0, 0], [0, 1, -1, 0], [0, 0, 1, 0], [1, 0, 0, 1]])
valores = ([50, -120, 350, 870])
valores = valores.T
solucao = solve(coeficientes, valores)
print(solucao)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-19 15:38:37) 
-- CODE:
from numpy import *
from numpy numpy.linalg import * 
coeficientes = array ([[1, -1, 0, 0], [0, 1, -1, 0], [0, 0, 1, 0], [1, 0, 0, 1]])
valores = ([50, -120, 350, 870])
valores = valores.T
solucao = solve(coeficientes, valores)
print(solucao)
-- ERROR:
File "XXXX", line 2
    from numpy numpy.linalg import * 
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-19 15:38:54) 
-- CODE:
from numpy import *
from numpy.linalg import * 
coeficientes = array ([[1, -1, 0, 0], [0, 1, -1, 0], [0, 0, 1, 0], [1, 0, 0, 1]])
valores = ([50, -120, 350, 870])
valores = valores.T
solucao = solve(coeficientes, valores)
print(solucao)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-19 15:41:06) 
-- CODE:
from numpy import *
from numpy.linalg import * 
coeficientes = array ([[1, -1, 0, 0], [0, 1, -1, 0], [0, 0, 1, 0], [1, 0, 0, 1]])
valores = ([50, -120, 350, 870])
valores = valores.T
solucao = solve(coeficientes, valores)
print(solucao)
-- EXECUTION TIME:
1.10269
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1838/1273/main.py", line 5, in <module>
    valores = valores.T
AttributeError: 'list' object has no attribute 'T'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-19 15:41:24) 
-- CODE:
from numpy import *
from numpy.linalg import * 
coeficientes = array ([[1, -1, 0, 0], [0, 1, -1, 0], [0, 0, 1, 0], [1, 0, 0, 1]])
valores = ([50, -120, 350, 870])
valores = valores.T
solucao = solve(coeficientes, valores)
print(solucao)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-19 15:41:46) 
-- CODE:
from numpy import *
from numpy.linalg import * 
coeficientes = array ([[1, -1, 0, 0], [0, 1, -1, 0], [0, 0, 1, 0], [1, 0, 0, 1]])
valores = array([50, -120, 350, 870])
valores = valores.T
solucao = solve(coeficientes, valores)
print(solucao)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-19 15:42:03) 
-- CODE:
from numpy import *
from numpy.linalg import * 
coeficientes = array ([[1, -1, 0, 0], [0, 1, -1, 0], [0, 0, 1, 0], [1, 0, 0, 1]])
valores = array([50, -120, 350, 870])
valores = valores.T
solucao = solve(coeficientes, valores)
print(solucao)
-- EXECUTION TIME:
1.21848
-- TEST CASE 1:
---- input:
Não_há
---- correct output:
[280. 230. 350. 590.]
---- user output:
[280. 230. 350. 590.]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
